# franka_trajectory_recorder

./: README.md  package.xml  setup.cfg  setup.py
franka_trajectory_recorder/: cube_sampling.py  free_movement_mode.py  joint_position_gui.py  joint_position_sender.py  trajectory_playback.py  trajectory_recorder.py  trajectory_recorder_new.py
trajectories/: dataset.hdf5  dataset_04_06.hdf5  dataset_new.hdf5  trajectory.csv  trajectory.h5
